K8S/charityapi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: charityapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: charityapi
  template:
    metadata:
      labels:
        component: charityapi
    spec:
      containers:
        - name: charityapi
          image: rushilojageer/donate-charityapi
          ports:
            - containerPort: 80
