K8S/donorapi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: donorapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: donorapi
  template:
    metadata:
      labels:
        component: donorapi
    spec:
      containers:
        - name: donorapi
          image: rushilojageer/donate-donorapi
          ports:
            - containerPort: 80
