K8S/donorworker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: donorworker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: donorworker
  template:
    metadata:
      labels:
        component: donorworker
    spec:
      containers:
        - name: donorworker
          image: rushilojageer/donate-donorworker
