K8S/fundapi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fundapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: fundapi
  template:
    metadata:
      labels:
        component: fundapi
    spec:
      containers:
        - name: fundapi
          image: rushilojageer/donate-fundapi
          ports:
            - containerPort: 8003
