K8S/fundworker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fundworker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: fundworker
  template:
    metadata:
      labels:
        component: fundworker
    spec:
      containers:
        - name: fundworker
          image: rushilojageer/donate-fundworker
