K8S/transactionfeed-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactionfeed-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: transactionfeed
  template:
    metadata:
      labels:
        component: transactionfeed
    spec:
      containers:
        - name: transactionfeed
          image: rushilojageer/donate-transactionfeed
