K8S/transactionprocessor-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactionprocessor-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: transactionprocessor
  template:
    metadata:
      labels:
        component: transactionprocessor
    spec:
      containers:
        - name: transactionprocessor
          image: rushilojageer/donate-transactionprocessor
