K8S/charityapi-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: charityapi-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: charityapi
  ports:
    - port: 80
      targetPort: 80
