K8S/donorapi-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: donorapi-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: donorapi
  ports:
    - port: 8002
      targetPort: 8002
