K8S/donorworker-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: donorworker-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: donorworker
  ports:
    - port: 80
      targetPort: 80
