K8S/fundapi-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fundapi-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: fundapi
  ports:
    - port: 8003
      targetPort: 8003
