K8S/fundworker-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fundworker-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: fundworker
  ports:
    - port: 80
      targetPort: 80
