K8S/gateway-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: gateway
  ports:
    - port: 80
      targetPort: 80
