K8S/rabbitmq-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: rabbitmq
  ports:
    - port: 5672
      targetPort: 5672
    - port: 15672
      targetPort: 15672
