K8S/transactionfeed-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: transactionfeed-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: transactionfeed
  ports:
    - port: 80
      targetPort: 80
