K8S/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 80
          - path: /charities/?(.*)
            backend:
              serviceName: charityapi-cluster-ip-service
              servicePort: 80
          - path: /donors/?(.*)
            backend:
              serviceName: donorapi-cluster-ip-service
              servicePort: 80
          - path: /funds/?(.*)
            backend:
              serviceName: fundapi-cluster-ip-service
              servicePort: 80
          - path: /rabbitmq/?(.*)
            backend:
              serviceName: rabbitmq-cluster-ip-service
              servicePort: 15672
